Fixed overflow issue

--- a/src/components/shared/Sidebar/Sidebar.css
+++ b/src/components/shared/Sidebar/Sidebar.css
@@ -1,5 +1,5 @@
 .sidebar {
-  width: var(--sidebar-width);
+  width: 1rem;
   height: 100vh;
   background-color: transparent;
   position: fixed;
