--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,12 +1,13 @@
 .snap-section {
   height: 100vh;
-  width: 100vw;
+  width: 80vw;
   scroll-snap-align: start;
   display: flex;
   justify-content: center;
   align-items: center;
   position: relative;
   max-width: 100%;
+  overflow-x: hidden;
 }
 
 .snap-section[data-horizontal="true"] {
